--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -7,6 +7,7 @@
 
 .root .page {
   border: 4px solid #B7DDEC;
+  border-radius: 3px;
   -webkit-box-shadow: inset 0 0 15px #c2f6fc;
           box-shadow: inset 0 0 15px #c2f6fc;
   position: relative;
@@ -29,7 +30,7 @@
           flex-direction: column;
   position: relative;
   bottom: 0;
-  z-index: 1;
+  z-index: 4;
 }
 
 .root .page__start-hello-heading {
@@ -49,22 +50,35 @@
 }
 
 .root .page__question {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   position: absolute;
-  z-index: 2;
+  z-index: 3;
+  top: 8px;
+  left: 611px;
 }
 
 .root .page__answer {
   position: absolute;
-  z-index: 3;
+  z-index: 2;
+  top: 8px;
+  left: 611px;
 }
 
 .root .page__finish {
   position: absolute;
-  z-index: 4;
+  z-index: 1;
+  top: 8px;
+  left: 611px;
 }
 
-.btn__start {
-  margin: auto auto 150px auto;
+.btn {
+  margin: 5px auto;
   display: block;
   color: #B7DDEC;
   border: 5px solid #2A73BB;
@@ -79,20 +93,19 @@
           box-shadow: inset 0 0 0.5em 0 #2A73BB, 0 0 0.5em 0 #2A73BB;
 }
 
-.btn__start::before {
-  content: '';
-  position: absolute;
-  background: #2A73BB;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  -webkit-transform: perspective(1em) rotateX(40deg) scale(1, 0.3);
-          transform: perspective(1em) rotateX(40deg) scale(1, 0.3);
-  -webkit-filter: blur(1em);
-          filter: blur(1em);
-  bottom: -2em;
-  left: 0px;
-  opacity: 0.7;
+.animate {
+  opacity: 1;
+  visibility: visible;
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
+}
+
+.animate-hidden {
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: opacity 1s, visibility 1s;
+  transition: opacity 1s, visibility 1s;
+  -webkit-transition-delay: 0s;
+          transition-delay: 0s;
 }
 /*# sourceMappingURL=style.css.map */
