--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,6 +17,7 @@ $max-h:850px;
     margin: 0 auto;
     .page{
         border: 4px solid $color-text;
+        border-radius: 3px;
         box-shadow: inset 0 0 15px rgb(194, 246, 252);
         position: relative;
         padding-bottom: 50px;
@@ -31,7 +32,7 @@ $max-h:850px;
             flex-direction: column;
             position: relative;
             bottom: 0;
-            z-index: 1;
+            z-index: 4;
             &-hello-heading{
                 margin-top: 50px;
                 text-align: center;
@@ -48,16 +49,24 @@ $max-h:850px;
             }
         }
         &__question{
+            display: flex;
+            flex-direction: column;
             position: absolute;
-            z-index: 2;
+            z-index: 3;
+            top: 8px;
+            left: 611px;
         }
         &__answer{
             position: absolute;
-            z-index: 3;
+            z-index: 2;
+            top: 8px;
+            left: 611px;
         }
         &__finish{
             position: absolute;
-            z-index: 4;
+            z-index: 1;
+            top: 8px;
+            left: 611px;
         }
     }
 }
@@ -66,8 +75,8 @@ $max-h:850px;
 
 // }
 
-.btn__start{
-    margin: auto auto 150px auto;
+.btn{
+    margin: 5px auto;
     display: block;
     color: $color-text;
     border: 5px solid $color-btn;
@@ -79,17 +88,30 @@ $max-h:850px;
     position: relative;
     cursor: pointer;
     box-shadow: inset 0 0 0.5em 0 $color-btn, 0 0 0.5em 0 $color-btn;
-    &::before{
-        content: '';
-        position: absolute;
-        background: $color-btn;
-        box-sizing: border-box;
-        width: 100%;
-        height: 100%;
-        transform: perspective(1em) rotateX(40deg) scale(1, 0.3);
-        filter: blur(1em);
-        bottom: -2em;
-        left: 0px;
-        opacity: 0.7;
-    }
+    // &::before{
+    //     content: '';
+    //     position: absolute;
+    //     background: $color-btn;
+    //     box-sizing: border-box;
+    //     width: 100%;
+    //     height: 100%;
+    //     transform: perspective(1em) rotateX(40deg) scale(1, 0.3);
+    //     filter: blur(1em);
+    //     bottom: -2em;
+    //     left: 0px;
+    //     opacity: 0.7;
+    // }
+}
+
+
+.animate{
+    opacity: 1;
+    visibility: visible;
+    transition-delay: 0s;
+}
+.animate-hidden{
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 1s, visibility 1s;
+    transition-delay: 0s;
 }
