--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,8 +13,8 @@
   position: relative;
   padding-bottom: 50px;
   margin: 0 auto;
-  min-width: 350px;
-  min-height: 600px;
+  min-width: 450px;
+  min-height: 850px;
   max-width: 450px;
   max-height: 850px;
   background-color: #0f315b;
@@ -30,7 +30,7 @@
           flex-direction: column;
   position: relative;
   bottom: 0;
-  z-index: 4;
+  z-index: 8;
 }
 
 .root .page__start-hello-heading {
@@ -58,21 +58,35 @@
       -ms-flex-direction: column;
           flex-direction: column;
   position: absolute;
-  z-index: 3;
+  z-index: 7;
+  top: 8px;
+  left: 611px;
+}
+
+.root .page__question1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: absolute;
+  z-index: 6;
   top: 8px;
   left: 611px;
 }
 
 .root .page__answer {
   position: absolute;
-  z-index: 2;
+  z-index: 5;
   top: 8px;
   left: 611px;
 }
 
 .root .page__finish {
   position: absolute;
-  z-index: 1;
+  z-index: 4;
   top: 8px;
   left: 611px;
 }
@@ -96,6 +110,8 @@
 .animate {
   opacity: 1;
   visibility: visible;
+  -webkit-transition: opacity 1s, visibility 1s;
+  transition: opacity 1s, visibility 1s;
   -webkit-transition-delay: 0s;
           transition-delay: 0s;
 }
