--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -50,6 +50,9 @@
 }
 
 .root .page__question {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -64,6 +67,9 @@
 }
 
 .root .page__question1 {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -78,6 +84,16 @@
 }
 
 .root .page__answer {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   position: absolute;
   z-index: 5;
   top: 8px;
@@ -105,6 +121,11 @@
   cursor: pointer;
   -webkit-box-shadow: inset 0 0 0.5em 0 #2A73BB, 0 0 0.5em 0 #2A73BB;
           box-shadow: inset 0 0 0.5em 0 #2A73BB, 0 0 0.5em 0 #2A73BB;
+}
+
+.image-question {
+  max-width: 400px;
+  border-radius: 5px;
 }
 
 .animate {
