--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,6 @@
 .root {
+  max-width: 450px;
+  max-height: 850px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   color: #B7DDEC;
@@ -13,8 +15,6 @@
   position: relative;
   padding-bottom: 50px;
   margin: 0 auto;
-  min-width: 450px;
-  min-height: 850px;
   max-width: 450px;
   max-height: 850px;
   background-color: #0f315b;
