--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,19 +1,22 @@
 .root {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   max-width: 450px;
   max-height: 850px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
   color: #B7DDEC;
   margin: 0 auto;
 }
 
 .root .page {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
   border: 4px solid #B7DDEC;
   border-radius: 3px;
   -webkit-box-shadow: inset 0 0 15px #c2f6fc;
           box-shadow: inset 0 0 15px #c2f6fc;
-  position: relative;
-  padding-bottom: 50px;
+  position: absolute;
   margin: 0 auto;
   max-width: 450px;
   max-height: 850px;
@@ -21,6 +24,8 @@
 }
 
 .root .page__start {
+  width: 450px;
+  height: 850px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -28,8 +33,7 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  position: relative;
-  bottom: 0;
+  position: absolute;
   z-index: 8;
 }
 
@@ -62,8 +66,6 @@
           flex-direction: column;
   position: absolute;
   z-index: 7;
-  top: 8px;
-  left: 611px;
 }
 
 .root .page__question1 {
@@ -79,8 +81,6 @@
           flex-direction: column;
   position: absolute;
   z-index: 6;
-  top: 8px;
-  left: 611px;
 }
 
 .root .page__answer {
@@ -96,15 +96,11 @@
           flex-direction: column;
   position: absolute;
   z-index: 5;
-  top: 8px;
-  left: 611px;
 }
 
 .root .page__finish {
   position: absolute;
   z-index: 4;
-  top: 8px;
-  left: 611px;
 }
 
 .btn {
