--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -9,6 +9,8 @@
 }
 
 .root .page {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
