--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -28,8 +28,8 @@ $max-h:850px;
         margin: 0 auto;
         // min-width: $min-w;
         // min-height: $min-h;
-        max-width: $max-w;
-        max-height: $max-h;
+        width: $max-w;
+        height: $max-h;
         background-color: $color-b;
         &__start{
             width: $max-w;
