--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,7 +2,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-width: 450px;
+  max-width: 430px;
   max-height: 850px;
   color: #B7DDEC;
   margin: 0 auto;
@@ -15,18 +15,18 @@
       -ms-flex: 1;
           flex: 1;
   border: 4px solid #B7DDEC;
-  border-radius: 3px;
+  border-radius: 15px;
   -webkit-box-shadow: inset 0 0 15px #c2f6fc;
           box-shadow: inset 0 0 15px #c2f6fc;
   position: absolute;
   margin: 0 auto;
-  width: 450px;
+  width: 430px;
   height: 850px;
   background-color: #0f315b;
 }
 
 .root .page__start {
-  width: 450px;
+  width: 430px;
   height: 850px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -40,7 +40,7 @@
 }
 
 .root .page__start-hello-heading {
-  margin-top: 50px;
+  margin: 100px 0 100px 0;
   text-align: center;
   font-size: 25px;
   color: #e9f6fb;
@@ -48,6 +48,7 @@
 }
 
 .root .page__start-hello-text {
+  margin-top: 45px;
   padding: 25px;
   text-align: center;
   color: #B7DDEC;
@@ -55,8 +56,13 @@
   line-height: 30px;
 }
 
+.root .page__start-jaba {
+  margin-top: 183px;
+  margin-left: 50px;
+}
+
 .root .page__question {
-  width: 450px;
+  width: 430px;
   height: 850px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -73,7 +79,7 @@
 }
 
 .root .page__question1 {
-  width: 450px;
+  width: 430px;
   height: 850px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -90,7 +96,7 @@
 }
 
 .root .page__answer {
-  width: 450px;
+  width: 430px;
   height: 850px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -106,20 +112,33 @@
   z-index: 5;
 }
 
+.root .page__answer-hedding {
+  text-align: center;
+  font-size: 20px;
+  color: #e9f6fb;
+}
+
+.root .page__answer-description {
+  text-align: center;
+  font-size: 18px;
+  color: #e9f6fb;
+  padding: 0 25px;
+}
+
 .root .page__finish {
   position: absolute;
   z-index: 4;
 }
 
 .btn {
-  margin: 5px auto;
+  margin: 15px auto;
   display: block;
   color: #B7DDEC;
   border: 5px solid #2A73BB;
   border-radius: 1rem;
   background: transparent;
   font-size: 15px;
-  padding: 15px 60px;
+  padding: 15px 50px;
   font-family: "Roboto Slab", sans-serif;
   position: relative;
   cursor: pointer;
@@ -127,9 +146,53 @@
           box-shadow: inset 0 0 0.5em 0 #2A73BB, 0 0 0.5em 0 #2A73BB;
 }
 
+.btn__start {
+  margin-top: 50px;
+}
+
+.btn_reload {
+  margin-top: 0px;
+}
+
+.number-question {
+  text-align: center;
+  font-size: 20px;
+  color: #e9f6fb;
+  text-transform: uppercase;
+}
+
 .image-question {
   max-width: 400px;
   border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.photo-question-btns {
+  margin-top: 50px;
+}
+
+.page__scores {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: baseline;
+      -ms-flex-pack: baseline;
+          justify-content: baseline;
+}
+
+.page__scores-true {
+  color: #018b48;
+  font-family: "Roboto Slab", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  margin-right: 60px;
+}
+
+.page__scores-false {
+  color: #8b0101;
+  font-family: "Roboto Slab", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
 }
 
 .animate {
