--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -5,9 +5,9 @@ $color-text: #B7DDEC;
 $color-span: #e9f6fb;
 
 
-$min-w:450px;
+$min-w:430px;
 $min-h:850px;
-$max-w:450px;
+$max-w:430px;
 $max-h:850px;
 
 
@@ -21,7 +21,7 @@ $max-h:850px;
         box-sizing: border-box;
         flex: 1;
         border: 4px solid $color-text;
-        border-radius: 3px;
+        border-radius: 15px;
         box-shadow: inset 0 0 15px rgb(194, 246, 252);
         position: absolute;
         // padding-bottom: 50px;
@@ -39,18 +39,23 @@ $max-h:850px;
             position: absolute;
             z-index: 8;
             &-hello-heading{
-                margin-top: 50px;
+                margin: 100px 0 100px 0;
                 text-align: center;
                 font-size: 25px;
                 color: $color-span;
                 margin-bottom: 5px;
             }
             &-hello-text{
+                margin-top: 45px;
                 padding: 25px;
                 text-align: center;
                 color: $color-text;
                 font-family: $font-f;
                 line-height: 30px;
+            }
+            &-jaba{
+                margin-top: 183px;
+                margin-left: 50px;  
             }
         }
         &__question{
@@ -71,7 +76,6 @@ $max-h:850px;
             flex-direction: column;
             position: absolute;
             z-index: 6;
-
         }
         &__answer{
             width: $max-w;
@@ -81,29 +85,34 @@ $max-h:850px;
             flex-direction: column;
             position: absolute;
             z-index: 5;
-
+            &-hedding{
+                text-align: center;
+                font-size: 20px;
+                color: $color-span;
+            }
+            &-description{
+                text-align: center;
+                font-size: 18px;
+                color: $color-span;
+                padding: 0 25px;
+            }
         }
         &__finish{
             position: absolute;
             z-index: 4;
-
         }
     }
 }
 
-// .btn{
-
-// }
-
 .btn{
-    margin: 5px auto;
+    margin: 15px auto;
     display: block;
     color: $color-text;
     border: 5px solid $color-btn;
     border-radius: 1rem;
     background: transparent;
     font-size: 15px;
-    padding: 15px 60px;
+    padding: 15px 50px;
     font-family: $font-f;
     position: relative;
     cursor: pointer;
@@ -123,9 +132,46 @@ $max-h:850px;
     // }
 }
 
+.btn__start{
+    margin-top: 50px;
+}
+.btn_reload{
+    margin-top: 0px;
+}
+
+.number-question{
+    text-align: center;
+    font-size: 20px;
+    color: $color-span;
+    text-transform: uppercase;
+}
+
 .image-question{
     max-width: 400px;
     border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.photo-question-btns{
+    margin-top: 50px;
+}
+
+.page__scores{
+    display: flex;
+    justify-content: baseline;
+    &-true{
+        color: rgb(1, 139, 72);
+        font-family: $font-f;
+        font-weight: 700;
+        font-size: 24px;
+        margin-right: 60px;
+    }
+    &-false{
+        color: rgb(139, 1, 1);
+        font-family: $font-f;
+        font-weight: 700;
+        font-size: 24px;
+    }     
 }
 
 .animate{
