--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,6 +12,7 @@ $max-h:850px;
 
 
 .root{
+    box-sizing: border-box;
     display: flex;
     max-width: $max-w;
     max-height: $max-h;
@@ -24,10 +25,7 @@ $max-h:850px;
         border-radius: 15px;
         box-shadow: inset 0 0 15px rgb(194, 246, 252);
         position: absolute;
-        // padding-bottom: 50px;
         margin: 0 auto;
-        // min-width: $min-w;
-        // min-height: $min-h;
         width: $max-w;
         height: $max-h;
         background-color: $color-b;
@@ -54,7 +52,7 @@ $max-h:850px;
                 line-height: 30px;
             }
             &-jaba{
-                margin-top: 183px;
+                margin-top: 175px;
                 margin-left: 50px;  
             }
         }
