--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,11 +11,11 @@ $color-span: #e9f6fb;
 
 
 $min-w:100vw;
-$min-h:850px;
+$min-h:100vw;
 $max-w:430px;
 $max-h:850px;
 
-@media(max-width:500px){
+// @media(max-width:500px){
     .root{
         box-sizing: border-box;
         display: flex;
@@ -33,10 +33,12 @@ $max-h:850px;
             margin: 0 auto;
             max-width: $max-w;
             max-height: $max-h;
+            min-height: $min-h;
+            min-width: $min-w;
             background-color: $color-b;
             &__start{
-                width: $max-w;
-                height: $max-h;
+                max-width: $max-w;
+                max-height: $max-h;
                 display: flex;
                 flex-direction: column;
                 position: absolute;
@@ -57,13 +59,16 @@ $max-h:850px;
                     line-height: 30px;
                 }
                 &-jaba{
-                    margin-top: 175px;
-                    margin-left: 50px;  
+                    // margin-top: 175px;
+                    // margin-left: 50px;  
+                    position: relative;
+                    left:25px;
+                    bottom: 0px;
                 }
             }
             &__question{
-                width: $max-w;
-                height: $max-h;
+                max-width: $max-w;
+                max-height: $max-h;
                 align-items: center;
                 display: flex;
                 flex-direction: column;
@@ -72,8 +77,8 @@ $max-h:850px;
     
             }
             &__question1{   
-                width: $max-w;
-                height: $max-h;
+                max-width: $max-w;
+                max-height: $max-h;
                 align-items: center;      //вторая страница вопросов
                 display: flex;
                 flex-direction: column;
@@ -81,8 +86,8 @@ $max-h:850px;
                 z-index: 6;
             }
             &__answer{
-                width: $max-w;
-                height: $max-h;
+                max-width: $max-w;
+                max-height: $max-h;
                 align-items: center;
                 display: flex;
                 flex-direction: column;
@@ -94,6 +99,9 @@ $max-h:850px;
                     color: $color-span;
                 }
                 &-description{
+                    width: 300px;
+                    height: 300px;
+                    overflow-y: scroll;
                     text-align: center;
                     font-size: 18px;
                     color: $color-span;
@@ -150,18 +158,21 @@ $max-h:850px;
     }
     
     .image-question{
-        max-width: 400px;
+        min-width: 350px;
+        max-width: 100vw;
         border-radius: 5px;
         margin-bottom: 10px;
     }
     
     .photo-question-btns{
-        margin-top: 50px;
+        position: relative;
+        bottom: 0px;
     }
     
     .page__scores{
         display: flex;
         justify-content: baseline;
+        margin-bottom: 10px;
         &-true{
             color: rgb(1, 139, 72);
             font-family: $font-f;
@@ -189,5 +200,5 @@ $max-h:850px;
         transition: opacity 1s, visibility 1s;
         transition-delay: 0s;
     }
-}
+// }
 
