--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -9,7 +9,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-width: 430px;
+  max-width: 100vw;
   max-height: 850px;
   color: #B7DDEC;
   margin: 0 auto;
@@ -27,7 +27,7 @@ body {
           box-shadow: inset 0 0 15px #c2f6fc;
   position: absolute;
   margin: 0 auto;
-  max-width: 430px;
+  max-width: 100vw;
   max-height: 850px;
   min-height: 100vw;
   min-width: 100vw;
@@ -35,8 +35,9 @@ body {
 }
 
 .root .page__start {
-  max-width: 430px;
+  max-width: 100vw;
   max-height: 850px;
+  min-height: 100vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -49,11 +50,10 @@ body {
 }
 
 .root .page__start-hello-heading {
-  margin: 100px 0 100px 0;
+  margin: 95px auto;
   text-align: center;
   font-size: 25px;
   color: #e9f6fb;
-  margin-bottom: 5px;
 }
 
 .root .page__start-hello-text {
@@ -72,7 +72,7 @@ body {
 }
 
 .root .page__question {
-  max-width: 430px;
+  max-width: 100vw;
   max-height: 850px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -89,7 +89,7 @@ body {
 }
 
 .root .page__question1 {
-  max-width: 430px;
+  max-width: 100vw;
   max-height: 850px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -106,7 +106,7 @@ body {
 }
 
 .root .page__answer {
-  max-width: 430px;
+  max-width: 100vw;
   max-height: 850px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -129,7 +129,7 @@ body {
 }
 
 .root .page__answer-description {
-  width: 300px;
+  width: 100vw;
   height: 300px;
   overflow-y: scroll;
   text-align: center;
@@ -175,8 +175,8 @@ body {
 }
 
 .image-question {
-  min-width: 350px;
-  max-width: 100vw;
+  width: 90vw;
+  margin: 0 5vw;
   border-radius: 5px;
   margin-bottom: 10px;
 }
@@ -227,5 +227,15 @@ body {
   transition: opacity 1s, visibility 1s;
   -webkit-transition-delay: 0s;
           transition-delay: 0s;
+}
+
+@media (max-width: 321px) {
+  .page__start-hello-heading {
+    margin-top: 65px !important;
+    margin-bottom: 0px !important;
+  }
+  .page__start-hello-text {
+    margin-top: 0px !important;
+  }
 }
 /*# sourceMappingURL=style.css.map */
