--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -12,193 +12,202 @@ $color-span: #e9f6fb;
 
 $min-w:100vw;
 $min-h:100vw;
-$max-w:430px;
+$max-w:100vw;
 $max-h:850px;
 
-// @media(max-width:500px){
-    .root{
+
+.root{
+    box-sizing: border-box;
+    display: flex;
+    max-width: $max-w;
+    max-height: $max-h;
+    color: $color-text;
+    margin: 0 auto;
+    .page{
         box-sizing: border-box;
-        display: flex;
+        flex: 1;
+        border: 4px solid $color-text;
+        border-radius: 15px;
+        box-shadow: inset 0 0 15px rgb(194, 246, 252);
+        position: absolute;
+        margin: 0 auto;
         max-width: $max-w;
         max-height: $max-h;
-        color: $color-text;
-        margin: 0 auto;
-        .page{
-            box-sizing: border-box;
-            flex: 1;
-            border: 4px solid $color-text;
-            border-radius: 15px;
-            box-shadow: inset 0 0 15px rgb(194, 246, 252);
-            position: absolute;
-            margin: 0 auto;
+        min-height: $min-h;
+        min-width: $min-w;
+        background-color: $color-b;
+        &__start{
             max-width: $max-w;
             max-height: $max-h;
             min-height: $min-h;
-            min-width: $min-w;
-            background-color: $color-b;
-            &__start{
-                max-width: $max-w;
-                max-height: $max-h;
-                display: flex;
-                flex-direction: column;
-                position: absolute;
-                z-index: 8;
-                &-hello-heading{
-                    margin: 100px 0 100px 0;
-                    text-align: center;
-                    font-size: 25px;
-                    color: $color-span;
-                    margin-bottom: 5px;
-                }
-                &-hello-text{
-                    margin-top: 45px;
-                    padding: 25px;
-                    text-align: center;
-                    color: $color-text;
-                    font-family: $font-f;
-                    line-height: 30px;
-                }
-                &-jaba{
-                    // margin-top: 175px;
-                    // margin-left: 50px;  
-                    position: relative;
-                    left:25px;
-                    bottom: 0px;
-                }
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            z-index: 8;
+            &-hello-heading{
+                margin: 95px auto;
+                text-align: center;
+                font-size: 25px;
+                color: $color-span;
             }
-            &__question{
-                max-width: $max-w;
-                max-height: $max-h;
-                align-items: center;
-                display: flex;
-                flex-direction: column;
-                position: absolute;
-                z-index: 7;
-    
+            &-hello-text{
+                margin-top: 45px;
+                padding: 25px;
+                text-align: center;
+                color: $color-text;
+                font-family: $font-f;
+                line-height: 30px;
             }
-            &__question1{   
-                max-width: $max-w;
-                max-height: $max-h;
-                align-items: center;      //вторая страница вопросов
-                display: flex;
-                flex-direction: column;
-                position: absolute;
-                z-index: 6;
-            }
-            &__answer{
-                max-width: $max-w;
-                max-height: $max-h;
-                align-items: center;
-                display: flex;
-                flex-direction: column;
-                position: absolute;
-                z-index: 5;
-                &-hedding{
-                    text-align: center;
-                    font-size: 20px;
-                    color: $color-span;
-                }
-                &-description{
-                    width: 300px;
-                    height: 300px;
-                    overflow-y: scroll;
-                    text-align: center;
-                    font-size: 18px;
-                    color: $color-span;
-                    padding: 0 25px;
-                }
-            }
-            &__finish{
-                position: absolute;
-                z-index: 4;
+            &-jaba{
+                // margin-top: 175px;
+                // margin-left: 50px;  
+                position: relative;
+                left:25px;
+                bottom: 0px;
             }
         }
-    }
-    
-    .btn{
-        margin: 15px auto;
-        display: block;
-        color: $color-text;
-        border: 5px solid $color-btn;
-        border-radius: 1rem;
-        background: transparent;
-        font-size: 15px;
-        padding: 15px 50px;
-        font-family: $font-f;
-        position: relative;
-        cursor: pointer;
-        box-shadow: inset 0 0 0.5em 0 $color-btn, 0 0 0.5em 0 $color-btn;
-        // &::before{
-        //     content: '';
-        //     position: absolute;
-        //     background: $color-btn;
-        //     box-sizing: border-box;
-        //     width: 100%;
-        //     height: 100%;
-        //     transform: perspective(1em) rotateX(40deg) scale(1, 0.3);
-        //     filter: blur(1em);
-        //     bottom: -2em;
-        //     left: 0px;
-        //     opacity: 0.7;
-        // }
-    }
-    
-    .btn__start{
-        margin-top: 50px;
-    }
-    .btn_reload{
-        margin-top: 0px;
-    }
-    
-    .number-question{
-        text-align: center;
-        font-size: 20px;
-        color: $color-span;
-        text-transform: uppercase;
-    }
-    
-    .image-question{
-        min-width: 350px;
-        max-width: 100vw;
-        border-radius: 5px;
-        margin-bottom: 10px;
-    }
-    
-    .photo-question-btns{
-        position: relative;
-        bottom: 0px;
-    }
-    
-    .page__scores{
-        display: flex;
-        justify-content: baseline;
-        margin-bottom: 10px;
-        &-true{
-            color: rgb(1, 139, 72);
-            font-family: $font-f;
-            font-weight: 700;
-            font-size: 24px;
-            margin-right: 60px;
-        }
-        &-false{
-            color: rgb(139, 1, 1);
-            font-family: $font-f;
-            font-weight: 700;
-            font-size: 24px;
-        }     
-    }
-    
-    .animate{
-        opacity: 1;
-        visibility: visible;
-        transition: opacity 1s, visibility 1s;
-        transition-delay: 0s;
-    }
-    .animate-hidden{
-        opacity: 0;
-        visibility: hidden;
-        transition: opacity 1s, visibility 1s;
-        transition-delay: 0s;
-    }
-// }
+        &__question{
+            max-width: $max-w;
+            max-height: $max-h;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            z-index: 7;
 
+        }
+        &__question1{   
+            max-width: $max-w;
+            max-height: $max-h;
+            align-items: center;      //вторая страница вопросов
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            z-index: 6;
+        }
+        &__answer{
+            max-width: $max-w;
+            max-height: $max-h;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            z-index: 5;
+            &-hedding{
+                text-align: center;
+                font-size: 20px;
+                color: $color-span;
+            }
+            &-description{
+                width: 100vw;
+                height: 300px;
+                overflow-y: scroll;
+                text-align: center;
+                font-size: 18px;
+                color: $color-span;
+                padding: 0 25px;
+            }
+        }
+        &__finish{
+            position: absolute;
+            z-index: 4;
+        }
+    }
+}
+
+.btn{
+    margin: 15px auto;
+    display: block;
+    color: $color-text;
+    border: 5px solid $color-btn;
+    border-radius: 1rem;
+    background: transparent;
+    font-size: 15px;
+    padding: 15px 50px;
+    font-family: $font-f;
+    position: relative;
+    cursor: pointer;
+    box-shadow: inset 0 0 0.5em 0 $color-btn, 0 0 0.5em 0 $color-btn;
+    // &::before{
+    //     content: '';
+    //     position: absolute;
+    //     background: $color-btn;
+    //     box-sizing: border-box;
+    //     width: 100%;
+    //     height: 100%;
+    //     transform: perspective(1em) rotateX(40deg) scale(1, 0.3);
+    //     filter: blur(1em);
+    //     bottom: -2em;
+    //     left: 0px;
+    //     opacity: 0.7;
+    // }
+}
+
+.btn__start{
+    margin-top: 50px;
+}
+.btn_reload{
+    margin-top: 0px;
+}
+
+.number-question{
+    text-align: center;
+    font-size: 20px;
+    color: $color-span;
+    text-transform: uppercase;
+}
+
+.image-question{
+    width: 90vw;
+    margin: 0 5vw;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.photo-question-btns{
+    position: relative;
+    bottom: 0px;
+}
+
+.page__scores{
+    display: flex;
+    justify-content: baseline;
+    margin-bottom: 10px;
+    &-true{
+        color: rgb(1, 139, 72);
+        font-family: $font-f;
+        font-weight: 700;
+        font-size: 24px;
+        margin-right: 60px;
+    }
+    &-false{
+        color: rgb(139, 1, 1);
+        font-family: $font-f;
+        font-weight: 700;
+        font-size: 24px;
+    }     
+}
+
+.animate{
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 1s, visibility 1s;
+    transition-delay: 0s;
+}
+.animate-hidden{
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 1s, visibility 1s;
+    transition-delay: 0s;
+}
+
+
+@media(max-width: 321px){
+    .page__start-hello-heading{
+        margin-top: 65px !important;
+        margin-bottom: 0px !important;
+    }
+    .page__start-hello-text{
+        margin-top: 0px !important;
+    }
+}
