--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -108,6 +108,7 @@ body {
 .root .page__answer {
   max-width: 100vw;
   max-height: 850px;
+  min-height: 100vw;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
