--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,13 +9,13 @@ body{
 //$font-f: 'Roboto Slab', serif;
 $font-f: 'Press Start 2P', sans-serif;
 $color-b: #1A1A1D;
-$color-btn: rgb(54, 52, 52);
+$color-btn: rgb(131, 150, 182);
 $color-text: #ffffff;
 $color-span: #e9f6fb;
 
 
 $min-w:100vw;
-$min-h:685px;
+$min-h:100%;
 $max-w:460px;
 $max-h:100%;
 
@@ -30,7 +30,7 @@ $max-h:100%;
     .page{
         box-sizing: border-box;
         flex: 1;
-        border: 4px solid rgb(102, 90, 90);
+        border: 4px solid rgb(131, 150, 182);
         border-radius: 5px;
         box-shadow: inset 0 0 15px rgb(149, 141, 141);
         position: absolute;
@@ -40,7 +40,7 @@ $max-h:100%;
         min-height: $min-h;
         min-width: $min-w;
         background-color: $color-b;
-        background-image: url(/src/img/bg1.gif);
+        background-image: url("../img/bg1.gif");
         &__start{
             max-width: $max-w;
             max-height: $max-h;
@@ -104,7 +104,7 @@ $max-h:100%;
             // z-index: 5;
             &-hedding{
                 text-align: center;
-                font-size: 20px;
+                font-size: 15px;
                 color: $color-span;
             }
             &-description{
@@ -155,9 +155,15 @@ $max-h:100%;
 
 .btn__start{
     margin-top: 50px;
+    width: 200px;
 }
 .btn_reload{
-    margin-top: 0px;
+    position: absolute;
+    bottom: 35px;
+}
+.btn_reload-quest{
+    position: absolute;
+    bottom: 35px;
 }
 .page__scores{
     position: absolute;
