--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -62,7 +62,7 @@ $max-h:100%;
                 text-align: center;
                 color: $color-text;
                 font-family: $font-f;
-                line-height: 20px;
+                line-height: 23px;
                 font-size: 15px;
             }
             &-jaba{
@@ -81,7 +81,6 @@ $max-h:100%;
             flex-direction: column;
             // position: absolute;
             // z-index: 7;
-
         }
         &__question1{   
             max-width: $max-w;
@@ -112,21 +111,23 @@ $max-h:100%;
                 height: 200px;
                 overflow-y: scroll;
                 text-align: center;
-                font-size: 18px;
+                font-size: 15px;
+                line-height: 23px;
                 color: $color-span;
                 padding: 0 25px;
             }
         }
-        &__finish{
-            // position: absolute;
-            // z-index: 4;
-        }
+        // &__finish{
+        //     // position: absolute;
+        //     // z-index: 4;
+        // }
     }
 }
 
 .btn{
     width: 300px;
-    margin: 15px auto;
+    line-height: 15px;
+    margin: 10px auto;
     display: block;
     color: $color-text;
     border: 5px solid $color-btn;
@@ -171,7 +172,7 @@ $max-h:100%;
 }
 .number-question{
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     color: $color-span;
     text-transform: uppercase;
 }
