--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Press Start 2P', sans-serif;
+  font-family: 'M PLUS 1p', sans-serif;
   font-weight: 400;
   background-color: black;
 }
@@ -50,19 +50,22 @@ body {
 .root .page__start-hello-heading {
   margin: 60px auto 0 auto;
   text-align: center;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 25px;
+  line-height: 30px;
+  font-weight: 600;
+  letter-spacing: 3px;
   color: #e9f6fb;
 }
 
 .root .page__start-hello-text {
-  margin-top: 45px;
+  margin-top: 30px;
   padding: 25px;
   text-align: center;
   color: #ffffff;
-  font-family: "Press Start 2P", sans-serif;
-  line-height: 23px;
-  font-size: 15px;
+  font-family: "M PLUS 1p", sans-serif;
+  line-height: 25px;
+  font-size: 17px;
+  font-weight: 500;
 }
 
 .root .page__start-jaba {
@@ -119,16 +122,20 @@ body {
 
 .root .page__answer-hedding {
   text-align: center;
-  font-size: 15px;
+  font-size: 16px;
+  font-weight: 600;
+  margin: 10px;
   color: #e9f6fb;
 }
 
 .root .page__answer-description {
+  margin: 0;
   width: 85vw;
-  height: 300px;
+  height: 200px;
   overflow-y: scroll;
   text-align: center;
-  font-size: 15px;
+  font-size: 16px;
+  font-weight: 500;
   line-height: 23px;
   color: #e9f6fb;
   padding: 0 25px;
@@ -140,12 +147,13 @@ body {
   margin: 10px auto;
   display: block;
   color: #ffffff;
-  border: -1px solid #8396b6;
+  border: 1px solid #8396b6;
   border-radius: 1rem;
   background: transparent;
-  font-size: 13px;
+  font-size: 15px;
+  font-weight: 600;
   padding: 10px 40px;
-  font-family: "Press Start 2P", sans-serif;
+  font-family: "M PLUS 1p", sans-serif;
   position: relative;
   cursor: pointer;
   -webkit-box-shadow: inset 0 0 0.5em 0 #8396b6, 0 0 0.5em 0 #8396b6;
@@ -153,7 +161,7 @@ body {
 }
 
 .btn__start {
-  margin-top: 50px;
+  margin-top: 10px;
   width: 200px;
 }
 
@@ -174,7 +182,9 @@ body {
 
 .number-question {
   text-align: center;
-  font-size: 15px;
+  font-size: 16px;
+  font-weight: 600;
+  margin: 10px;
   color: #e9f6fb;
   text-transform: uppercase;
 }
@@ -203,7 +213,7 @@ body {
 
 .page__scores-true {
   color: #018b48;
-  font-family: "Press Start 2P", sans-serif;
+  font-family: "M PLUS 1p", sans-serif;
   font-weight: 700;
   font-size: 24px;
   margin-right: 60px;
@@ -211,7 +221,7 @@ body {
 
 .page__scores-false {
   color: #8b0101;
-  font-family: "Press Start 2P", sans-serif;
+  font-family: "M PLUS 1p", sans-serif;
   font-weight: 700;
   font-size: 24px;
 }
