create button delete scores

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -162,7 +162,12 @@ body {
 
 .btn__start {
   margin-top: 10px;
-  width: 200px;
+  width: 300px;
+}
+
+.btn__restart {
+  margin-top: 10px;
+  width: 300px;
 }
 
 .btn_reload {
