--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -165,7 +165,11 @@ $max-h:100%;
 
 .btn__start{
     margin-top: 10px;
-    width: 200px;
+    width: 300px;
+}
+.btn__restart{
+    margin-top: 10px;
+    width: 300px;
 }
 .btn_reload{
     position: absolute;
