--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -116,6 +116,8 @@ $max-h:100%;
                 margin: 0;
                 width: 85vw;
                 height: 200px;
+                position: absolute;
+                bottom: 115px;
                 overflow-y: scroll;
                 text-align: center;
                 font-size: 16px;
